--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+
+}
+
+.App > div:not(:first-child) {
+    margin-top: 24px;
 }
 
 .App-header {
@@ -11,4 +16,21 @@
 
 .App-intro {
   font-size: large;
+}
+
+.box-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.box {
+  width: 300px;
+  height: 450px;
+  margin: 30px;
+  border: solid 2px lavender;
+}
+
+.artist-search input {
+    margin-right: 24px;
 }
