--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+    text-align: center;
 
 }
 
@@ -8,27 +8,34 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 .box-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .box {
-  width: 200px;
-  height: 350px;
-  margin: 15px;
-  border: solid 2px lavender;
+    width: 200px;
+    height: 350px;
+    margin: 15px;
+    border: solid 2px lavender;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.box img {
+    width: 100%;
 }
 
 .artist-search input {
